--- a/metadata.yaml
+++ b/metadata.yaml
@@ -49,5 +49,6 @@ subjects:
 - !lcsh 'Assassins -- Drama'
 - !lcsh 'Conspiracies -- Drama'
 - !lcsh 'Caesar, Julius -- Assassination -- Drama'
+- GITenberg
 title: Jules César
 url: http://www.gutenberg.org/ebooks/15847
